# ucsd-gp-team5-cpp

./: .gitignore  CMakeLists.txt  CaptureImage.cpp  README.md  cameraCalibration.cpp  captureImage.cpp  preview.cpp  wiringPiTest.cpp
include/: calibration.hpp  constants.hpp  filter.hpp
lib/: constants.h
src/: calibration.cpp  filter.cpp
